<resources>
  <string name="app_name">MovieKu</string>
  <string name="title_activity_main">MainActivity</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="about_desc">Movie information android app. An Indonesia Android Kejar Intermediate class final project. Data provided by The Movie Database (TMDb) API.</string>
  <string name="about_author">Muhammad Wahyudin IAK 3 - Batch 4 - Bandung 2018</string>
  <string name="about_btn_iak">About IAK</string>
  <string name="about_btn_source">Source</string>
  <string name="about_btn_homepage">Developer</string>
  <string name="nav_header_tagline">Movie info at your fingertips</string>
  <string name="list_category_empty">Oops, there\'s nothing here. Try another category.</string>
  <string name="list_search_not_found">Oops, there\'s nothing here. Try another keyword.</string>
  <string name="list_network_error">Network error. Are you connected to the internet?</string>
</resources>
