<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="io.github.hyuwah.movieku.AboutActivity">

  <FrameLayout
    android:id="@+id/about_fl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scaleType="centerCrop"
      android:src="@drawable/bg_movieku"/>

    <ImageView
      android:layout_width="128dp"
      android:layout_height="128dp"
      android:layout_marginBottom="16dp"
      android:layout_gravity="center"
      android:src="@drawable/web_hi_res_512"/>

    <TextView
      android:id="@+id/about_app_name"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="40dp"
      android:layout_gravity="bottom|center_horizontal"
      android:fontFamily="monospace"
      android:text="@string/app_name"
      android:textColor="@android:color/white"
      android:textSize="30sp"/>
    <TextView
      android:id="@+id/about_app_version"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
      android:layout_gravity="bottom|center_horizontal"
      android:fontFamily="monospace"
      android:text="@string/versionName"
      android:textColor="@android:color/white"
      android:textSize="16sp"/>
  </FrameLayout>

  <TextView
    android:id="@+id/about_desc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/about_fl"
    android:padding="16dp"
    android:lineSpacingMultiplier="1.15"
    android:text="@string/about_desc"
    android:textAlignment="center"
    android:textColor="@color/primaryText"
    android:textSize="14sp"/>
  <TextView
    android:id="@+id/about_author"
    android:textStyle="italic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/about_desc"
    android:padding="16dp"
    android:lineSpacingMultiplier="1.15"
    android:text="@string/about_author"
    android:textAlignment="center"
    android:textAllCaps="false"
    android:textColor="@color/primaryText"
    android:textSize="14sp"/>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:layout_alignParentBottom="true">
    <Button
      android:id="@+id/btn_about_iak"
      style="@style/Widget.AppCompat.Button.Borderless.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:drawablePadding="4dp"
      android:drawableTint="@color/colorAccent"
      android:drawableTop="@drawable/ic_android"
      android:text="@string/about_btn_iak"
      android:textAlignment="center"
      android:textAllCaps="false"/>
    <Button
      android:id="@+id/btn_about_source"
      style="@style/Widget.AppCompat.Button.Borderless.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:drawablePadding="4dp"
      android:drawableTint="@color/colorAccent"
      android:drawableTop="@drawable/ic_code"
      android:text="@string/about_btn_source"
      android:textAlignment="center"
      android:textAllCaps="false"/>
    <Button
      android:id="@+id/btn_about_homepage"
      style="@style/Widget.AppCompat.Button.Borderless.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:drawablePadding="4dp"
      android:drawableTint="@color/colorAccent"
      android:drawableTop="@drawable/ic_web"
      android:text="@string/about_btn_homepage"
      android:textAlignment="center"
      android:textAllCaps="false"/>
  </LinearLayout>


</RelativeLayout>
